--- a/css/main.css
+++ b/css/main.css
@@ -2296,7 +2296,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   background-position: center center;
   margin-bottom: 50px;
   height: 520px;
-  width: 100vw;
 }
 
 .banner-area .banner-image{
@@ -2316,9 +2315,13 @@ body.mobile-nav-active #mobile-nav-toggle {
   background-size: contain;
   background-repeat: repeat-x;
   position: absolute;
-  margin-top: -150px;
+  margin-top: -145px;
   width: 100%;
   height: 100px;
+}
+
+.shape-divider.shape-agen{
+  margin-top: -95px;
 }
 
 .shape-divider.reverse{
@@ -2578,8 +2581,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 120%;
   font-weight: 400;
 }
-
-@media (max-width: 991px){
+/*@media (max-width: 991px){
   .how-area .content{
     align-items: center !important;
     display: flex;
@@ -2602,16 +2604,19 @@ body.mobile-nav-active #mobile-nav-toggle {
   }
 
 }
-
+*/
 @media (max-width: 500px){
-  .how-area .content .text p{
-    font-size: 100%;
+  .how-area .content{
+    /*background-color: black;*/
+    margin: 20px 0;
+    padding: 0 20px;
   }
 }
 
 .infoagen-area {
   background-color: rgba(0, 156, 255, 1);
   color: #fff;
+  padding-bottom: 150px;
 }
 
 .infoagen-area h1, .infoagen-area h4 {
@@ -2622,8 +2627,63 @@ body.mobile-nav-active #mobile-nav-toggle {
   z-index: 20;
 }
 
-.carousel-indicators{
-  bottom: -15px;
+#carousel-example .carousel-item{
+  padding: 10px;
+}
+
+#carousel-example .carousel-item .carousel-content{
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 10px;
+  padding-bottom: 13px;
+  box-shadow: 3px 3px 5px #555;
+}
+
+#carousel-example .carousel-item .carousel-content img{
+  border-radius: 5px;
+}
+
+#carousel-example .carousel-item .carousel-content h5{
+  color: #555555;
+  font-size: 150%;
+  font-weight: 600 !important;
+  margin: 10px 0px;
+}
+
+#carousel-example .carousel-item .carousel-content a{
+  background-color: white;
+  border-radius: 50%;
+  color: #555;
+  font-size: 180%;
+  margin: 0 3px;
+  padding: 4px 9px;
+}
+
+@media (max-width: 992px){
+  #carousel-example .carousel-item .carousel-content h5{
+    font-size: 200%;
+  }
+
+  #carousel-example .carousel-item .carousel-content a{
+    font-size: 240%;
+  }
+}
+
+#carousel-example .carousel-item .carousel-content a.instagram:hover{
+  background-color: #405de6;
+  border: none;
+  color: white;
+}
+
+#carousel-example .carousel-item .carousel-content a.whatsapp:hover{
+  background-color: #25d366;
+  border: none;
+  color: white;
+}
+
+.carousel-control-next,.carousel-control-prev{
+  top: 30%;
+  bottom: 30%;
 }
 
 .single-review .title {
@@ -2651,6 +2711,32 @@ body.mobile-nav-active #mobile-nav-toggle {
   .counter-row {
     text-align: center;
   }
+}
+
+.gabung-area .gabung-content img{
+  width: 40%;
+  padding: 15px;
+}
+
+.gabung-area .gabung-content .gabung-image{
+  width: 90%;
+  height: 500px;
+  background: linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,0),rgba(255,255,255,1) 95%), url(../img/nattareza.png);
+  /*background: url(../img/nattareza.png);*/
+  background-position: top center;
+  background-size: cover;
+}
+
+.gabung-area .gabung-content .btn-wa{
+  font-size: 20px;
+  background-color: #25d366;
+  border: none;
+  border-radius: 5px;
+}
+
+.gabung-area .gabung-content .btn-wa:hover{
+  background-color: #25c466;
+  box-shadow: 2px 2px 3px #aaa;
 }
 
 .single-blog img {
@@ -2695,12 +2781,12 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .footer-area {
   color: #fff;
-  padding-top: 220px;
-  background: url(../img/footer-bg.jpg) center;
+  padding-top: 120px;
+  background: linear-gradient(0deg,rgba(0,0,0,.9),rgba(0,0,0,.9)),url(../img/footer-bg.png) center;
   background-size: cover;
 }
 
-.footer-area h6 {
+.footer-area h6,.footer-area h3 {
   color: #fff;
   margin-bottom: 25px;
   font-size: 18px;
@@ -2712,7 +2798,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .footer-social a {
-  padding-right: 25px;
+  font-size: 24px;
+  padding: 10px;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
@@ -2833,12 +2920,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 @media (max-width: 991.98px) {
   .single-footer-widget {
     margin-bottom: 30px;
-  }
-}
-
-@media (max-width: 800px) {
-  .social-widget {
-    margin-top: 30px;
   }
 }
 
