--- a/css/main.css
+++ b/css/main.css
@@ -1887,8 +1887,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header.header-scrolled {
-  background: rgba(0, 156, 255,.7);
+  background: rgba(0, 156, 255,1);
   transition: all 0.5s;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0,.5);
 }
 
 .header-top ul {
@@ -2298,6 +2299,22 @@ body.mobile-nav-active #mobile-nav-toggle {
   height: 520px;
 }
 
+.banner-area .btn-buy{
+  border: 2px solid #fff;
+  border-radius: 50px;
+  padding: 10px 18px;
+  font-size: 20px;
+  background-color: #fff;
+  color: #009cff;
+  font-weight: 600;
+}
+
+.banner-area .btn-buy:hover{
+  background-color: transparent;
+  border: 2px solid #fff;
+  color: #fff;
+}
+
 .banner-area .banner-image{
   width: 100%;
 }
@@ -2346,6 +2363,16 @@ body.mobile-nav-active #mobile-nav-toggle {
   transform: rotate(180deg);
 }
 
+@media(max-width: 450px){
+  .shape-divider-top.sebelum-menu{
+    margin-top: calc(-35px - 5vw);
+  }
+
+  .shape-divider-top.reverse{
+    margin-top: calc(-65px + 5vw);
+  }
+}
+
 @media (max-width: 1199.98px) {
   .banner-area .fullscreen {
     height: 920px !important;
@@ -2353,13 +2380,17 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 @media (max-width: 991px) {
+  .banner-area .btn-buy{
+    display: none;
+  }
+
   .banner-area .banner-content{
     margin-top: -150px;    
   }
 
   .banner-area .banner-image img{
     width: 132px;
-    margin-top: -600px;
+    margin-top: -550px;
   }
 }
 
@@ -2370,7 +2401,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .banner-content {
-  margin-top: -250px;
+  margin-top: -200px;
 }
 
 .banner-content h1 {
@@ -2386,9 +2417,24 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-weight: 700;
 }
 
+
+br.show{
+  display: none;
+}
+
 @media (max-width: 991.98px) {
   .banner-content h1 {
     font-size: 36px;
+    text-align: center;
+  }
+
+  .banner-content h6{
+    text-align: center;
+    margin-top: 10px;
+  }
+
+  br.show{
+    display: block;
   }
 }
 
@@ -2415,7 +2461,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 @media (max-width: 504px) {
   .banner-content br {
-    display: none;
+    /*display: none;*/
   }
 }
 
@@ -2436,7 +2482,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 @media (max-width: 768px) {
   .video-sec-area {
-    padding-top: 0px;
+    padding-top: 50px;
   }
 }
 
@@ -2557,59 +2603,43 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #777;
 }
 
-
-.how-area .icon img{
-  width: auto;
-  height: 120px;
-  transition: .3s;
+.how-area .icon{
+  background-color: #f5f5f5;
+  border-radius: 50%;
+  width: 140px;
+  height: 140px;
+  margin: 0 auto;
+  padding: 30px;
 }
 
-.how-area .icon img::after{
-  width: 100%;
+.how-area .icon img{
   height: 100%;
-  background-color: black;
-  z-index: 9;
-  position: absolute;
+  width: auto;
+  transition: .3s;
 }
 
 .how-area .icon img:hover{
   transform: rotate(10deg);
 }
 
+.how-area .text h5{
+  margin-bottom: 10px;
+  font-size: 140%;
+}
 
 .how-area .text p{
-  font-size: 120%;
-  font-weight: 400;
+  font-size: 100%;
+  /*font-weight: 400;*/
 }
-/*@media (max-width: 991px){
-  .how-area .content{
-    align-items: center !important;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 10px 0;
-  }
 
-  .how-area .content .icon{
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-
-  .how-area .content .text{
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-
-  .how-area .content .text p{
-    text-align: left;
-  }
-
-}
-*/
 @media (max-width: 500px){
   .how-area .content{
-    /*background-color: black;*/
     margin: 20px 0;
     padding: 0 20px;
+  }
+
+  .how-area .text p{
+    padding: 0 25px;
   }
 }
 
@@ -2716,6 +2746,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 .gabung-area .gabung-content img{
   width: 40%;
   padding: 15px;
+  margin-bottom: 10px;
 }
 
 .gabung-area .gabung-content .gabung-image{
@@ -2730,13 +2761,26 @@ body.mobile-nav-active #mobile-nav-toggle {
 .gabung-area .gabung-content .btn-wa{
   font-size: 20px;
   background-color: #25d366;
-  border: none;
-  border-radius: 5px;
+  border: 2px solid #25d366;
+  border-radius: 50px;
+  padding: 8px 20px;
+  transition: .3s;
 }
 
 .gabung-area .gabung-content .btn-wa:hover{
-  background-color: #25c466;
+  background-color: transparent;
+  border: 2px solid #25d366;
+  color: #25d366;
   box-shadow: 2px 2px 3px #aaa;
+}
+
+@media (max-width: 991px){
+  .gabung-area .gabung-text{
+    order: 2;
+  }
+  .gabung-area .gabung-image{
+    order: 1;
+  }
 }
 
 .single-blog img {
@@ -2781,8 +2825,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .footer-area {
   color: #fff;
-  padding-top: 120px;
-  background: linear-gradient(0deg,rgba(0,0,0,.9),rgba(0,0,0,.9)),url(../img/footer-bg.png) center;
+  padding-top: 50px;
+  background: linear-gradient(0deg,rgba(0,0,0,1),rgba(0,0,0,.8)),url(../img/footer-bg.png) center;
   background-size: cover;
 }
 
@@ -2791,6 +2835,17 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 25px;
   font-size: 18px;
   font-weight: 600;
+}
+
+.footer-area .single-footer-widget img{
+  width: 50px;
+  margin-top: -15px;
+  margin-bottom: 5px;
+}
+
+.footer-area i.sign-icon{
+  font-size: 32px;
+  margin-bottom: 10px;
 }
 
 .copy-right-text i, .copy-right-text a {
@@ -2818,11 +2873,11 @@ body.mobile-nav-active #mobile-nav-toggle {
   transition: all 0.3s ease 0s;
 }
 
-@media (max-width: 991.98px) {
+/*@media (max-width: 991.98px) {
   .footer-social {
     text-align: left;
   }
-}
+}*/
 
 .single-footer-widget input {
   border: none;
